syntax = "proto3";

import "google/protobuf/wrappers.proto";

package ecommerce;

option go_package = "extended/server/ecommerce";

service OrderManagement {
  rpc addOrder(Order) returns (OrderID);
  rpc processOrders(stream google.protobuf.StringValue) returns (stream CombinedShipment);
}

message Order {
  string id = 1;
  repeated string items = 2;
  string destination = 3;
  float price = 4;
}

message OrderID {
  string value = 1;
}

message CombinedShipment {
  string id = 1;
  repeated Order orderList = 2;
  string destination = 3;
}